# seonbi-rust-wasm

./: Cargo.toml  index-14302458eaadf154.js  index-14302458eaadf154_bg.wasm  index-369355e2f2f3a2a1.js  index-369355e2f2f3a2a1_bg.wasm  index-3d8ea82c97d853c9.js  index-3d8ea82c97d853c9_bg.wasm  index-791f56839504cc13.js  index-791f56839504cc13_bg.wasm  index-82b29a8ee1e4f5a.js  index-82b29a8ee1e4f5a_bg.wasm  index-fbc40f4c0537a9e4.js  index-fbc40f4c0537a9e4_bg.wasm  index.html  main.css
.github/workflows/: build.yaml
src/: main.rs
src/services/: mod.rs  seonbi.rs
